--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *.iml
-/local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+AndroidClient/local.properties
+AndroidClient/.idea/libraries
+AndroidClient/.idea/modules.xml
+AndroidClient/.idea/workspace.xml
+AndroidClient/.DS_Store
 JavaServer/.idea/workspace.xml
-*.gradle
+AndroidClient/.gradle
+AndroidClient/build
+AndroidClient/captures
+AndroidClient/.externalNativeBuild
