creating connection service

--- a/AndroidClient/services/src/main/AndroidManifest.xml
+++ b/AndroidClient/services/src/main/AndroidManifest.xml
@@ -1,2 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.geekbrains.services" />
+    package="ru.geekbrains.services">
+
+    <application>
+        <service
+            android:name=".ServerConnectionService"
+            android:enabled="true"
+            android:exported="true"></service>
+    </application>
+
+</manifest>
