--- a/AndroidClient/main/build.gradle
+++ b/AndroidClient/main/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':common')
     implementation files('../common/libs/common.jar')
+    implementation project(path: ':services')
 }
