--- a/JavaServer/pom.xml
+++ b/JavaServer/pom.xml
@@ -6,7 +6,15 @@
 
     <groupId>geekbrains.ru</groupId>
     <artifactId>server</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>authentication</module>
+        <module>common</module>
+        <module>database</module>
+        <module>main</module>
+        <module>storage</module>
+    </modules>
 
 
 </project>
