--- a/AndroidClient/main/src/main/AndroidManifest.xml
+++ b/AndroidClient/main/src/main/AndroidManifest.xml
@@ -16,11 +16,12 @@
         android:theme="@style/AppTheme">
         <activity android:name=".authentication.AuthenticationActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".storage.StorageActivity"></activity>
     </application>
 
 </manifest>
