binding to services

--- a/AndroidClient/services/src/main/AndroidManifest.xml
+++ b/AndroidClient/services/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
         <service
             android:name=".ServerConnectionService"
             android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".FileStorageService"
+            android:enabled="true"
             android:exported="true"></service>
     </application>
 
