add access app to ext storage

--- a/AndroidClient/main/src/main/AndroidManifest.xml
+++ b/AndroidClient/main/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ru.geekbrains.main">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -21,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".storage.StorageActivity"></activity>
+        <activity android:name=".storage.StorageActivity"/>
     </application>
 
 </manifest>
