--- a/JavaServer/pom.xml
+++ b/JavaServer/pom.xml
@@ -16,5 +16,14 @@
         <module>storage</module>
     </modules>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.21.0.1</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
